syntax = "proto3";
package app;
// declare a service for each controller you have
service AppController {
  // declare an rpc for each method that is called via gRPC
  rpc Accumulate (NumberArray) returns (SumOfNumberArray);
}
// declare the types used above
message NumberArray {
  repeated double data = 1;
}

message SumOfNumberArray {
  double sum = 1;
}
